[gd_scene load_steps=20 format=2]

[ext_resource path="res://actors/Player.gd" type="Script" id=1]
[ext_resource path="res://models/pistol/pistol.tscn" type="PackedScene" id=2]
[ext_resource path="res://weapons/components/WeaponHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://particles/crosshairs/target_6.png" type="Texture" id=4]
[ext_resource path="res://weapons/components/GunDropper.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/shotgun/shotgun.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/smg/smg.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/sniper/sniper.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="Animation" id=4]
resource_name = "FirePistol"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Viewmodel:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.45 ),
"transitions": PoolRealArray( 1.88361, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.01 ), Vector3( 0, -0.1, 0.01 ), Vector3( 0, 0, 0.01 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Viewmodel:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.45 ),
"transitions": PoolRealArray( 0.27, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 50, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FireSMG"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Viewmodel:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.267943, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.114 ), Vector3( 0, 0, 0.01 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Viewmodel:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.267943, 1 ),
"update": 0,
"values": [ Vector3( 5, 0, -10 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Viewmodel:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.01 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Viewmodel:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Viewmodel:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( -90, 0, 0 ), Vector3( 5, 0, 0 ), Vector3( 25, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Viewmodel:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector3( -0.024, 0.109, -0.157 ), Vector3( 0, 0, 0.1 ), Vector3( 0, 0, 0.05 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="PrismMesh" id=8]
size = Vector3( 2, 2, 0.5 )

[sub_resource type="CylinderShape" id=9]
radius = 3.0
height = 8.0

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.490196, 0, 0, 1 ), Color( 0.490196, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Hurt:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.490196, 0, 0, 0 ) ]
}

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionBody" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="CollisionFoot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
visible = false
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )

[node name="Camera" type="Camera" parent="Head"]
far = 300.0

[node name="Viewmodel" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )

[node name="PistolMesh" parent="Head/Camera/Viewmodel" instance=ExtResource( 2 )]
transform = Transform( -0.1, 0, 1.50996e-08, 0, 0.1, 0, -1.50996e-08, 0, -0.1, 0.11, -0.07, -0.2 )
visible = false

[node name="ShotgunMesh" parent="Head/Camera/Viewmodel" instance=ExtResource( 6 )]
transform = Transform( -0.1, 0, -3.25841e-08, 0, 0.1, 0, 3.25841e-08, 0, -0.1, 0.08, -0.051, -0.25 )
visible = false

[node name="SMGMesh" parent="Head/Camera/Viewmodel" instance=ExtResource( 7 )]
transform = Transform( -0.05, 0, -1.94707e-08, 0, 0.05, 0, 1.94707e-08, 0, -0.05, 0.064, -0.044, -0.122 )
visible = false

[node name="SniperMesh" parent="Head/Camera/Viewmodel" instance=ExtResource( 8 )]
transform = Transform( -0.05, 0, -1.62921e-08, 0, 0.05, 0, 1.62921e-08, 0, -0.05, 0.058, -0.049, -0.157 )
visible = false

[node name="Animations" type="AnimationPlayer" parent="Head/Camera"]
autoplay = "ReadyPistol"
anims/FirePistol = SubResource( 4 )
anims/FireSMG = SubResource( 5 )
anims/IdlePistol = SubResource( 6 )
anims/ReadyPistol = SubResource( 7 )

[node name="WeaponHandler" parent="Head/Camera" instance=ExtResource( 3 )]

[node name="EditorArrow" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 0.0871556, 0.996195, 0, -0.996195, 0.0871556, 0, -0.25, -3 )
mesh = SubResource( 8 )
material/0 = null

[node name="GunDropper" parent="Head" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25, 0 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="PickupArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="PickupArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 9 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effects" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hurt" type="ColorRect" parent="Control/Effects"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.490196, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Effects"]
autoplay = "Idle"
anims/Hurt = SubResource( 10 )
anims/Idle = SubResource( 11 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupNotice" type="PanelContainer" parent="Control/CenterContainer"]
visible = false
margin_left = 505.0
margin_top = 293.0
margin_right = 519.0
margin_bottom = 307.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CenterContainer/PickupNotice"]
margin_left = 7.0
margin_top = 7.0
margin_right = 183.0
margin_bottom = 21.0
text = "press 'E' to pickup the thing"
align = 1
valign = 1

[node name="Crosshair" type="TextureRect" parent="Control/CenterContainer"]
margin_left = 488.0
margin_top = 276.0
margin_right = 536.0
margin_bottom = 324.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
[connection signal="animation_finished" from="Head/Camera/Animations" to="." method="_on_Animations_animation_finished"]
[connection signal="fired" from="Head/Camera/WeaponHandler" to="." method="on_weapon_fired"]
[connection signal="swapped" from="Head/Camera/WeaponHandler" to="." method="on_weapon_swapped"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_PickupArea_body_exited"]
